# C-and-Cplusplus

./: .gitignore  CMakeLists.txt  README.md  Syncs.hpp  Thread_pool.hpp  text_03_34_0.cpp
2024_everyday_documents/: test_06_23_0.c  text_09_24_3.c
2025/: test_5_23_0.cpp  text_03_01_0.c  text_03_03_0.c  text_03_03_1.c  text_03_06_0.c  text_03_07_0.c  text_03_08_0.c  text_03_09_0.c  text_03_10_0.c  text_03_11_0.c  text_03_11_1.c  text_03_11_2.c  text_03_13_0.c  text_03_13_1.c  text_03_13_2.c  text_03_14_0.cpp  text_03_15_0.c  text_03_15_1.c  text_03_16_0.c  text_03_16_1.c  text_03_16_2.c  text_03_16_3.md  text_03_17_0.cpp  text_03_17_1.cpp  text_03_17_2.cpp  text_03_18_0.cpp  text_03_20_1.c  text_03_22_0.cpp  text_03_26_0.cpp  text_03_28_0.cpp  text_04_03_0.cpp  text_04_09_0.cpp  text_04_11_0.cpp  text_04_14_0.cpp  text_04_14_1.cpp  text_04_15_0.cpp  text_04_15_o.cpp  text_04_17_0.cpp  text_04_20_0.cpp  text_04_21_0.cpp  (+5 more)
2025_everyday_documents/: text_03_16_0.c  text_04_15_0.cpp  text_05_26_0.cpp  text_09_03_0.cpp
Asio/: agen.cpp  agen.hpp  p2pc.cpp  p2ps.cpp  proxy_server.cpp  server.hpp  thread_pool.cpp
Asio/httpserver/: 1.js  CMakeLists.txt  app.js  index.html  server.cpp  server.hpp
Asio/httpserver/webroot/: app.js  index.html
C/: max_bool_value.c  string_array_print.c
C++20/: CMakeLists.txt  coroutine.cpp  format.cpp  module.cpp  mymodule.cppm  print.cpp  ranges.cpp  test.cpp
Encapsulation/: Syncs.hpp  Thread_pool.hpp
Go/: test_11_05_0.go  test_11_10_0.go  test_11_11_0.go  test_11_14_0.go  test_11_14_1.go
Html/: text_06_30_0.html
Linux/: Makefile  (+7 more)
(+133 files in other folders)
